Fix infinite recursion in project filter model

BUG: 443026